# regionalHousingAgentKorea

./: DOF__Summary_of_Neighborhood_Sales_by_Neighborhood_Citywide_by_Borough_20250704.csv  Housing_Jeonse_Price_Index_by_Scale__2021.6100.0__20250711213548.csv  Housing_Sales_Price_Index_by_Scale__2021.6100.0__20250711213559.csv  app.py  csvtest.py  main.py  mcp_test.py  pyproject.toml  requirements.txt
frontend/: index.html  kr.json  script.js
input file/: medianAskingRent_All.csv  priceIndex_All.csv
uploads/: output_20c4d906246c4cecb79ad91b52da1304.csv  output_8a4e24ed3f3c4074ad8f195bbe7ea6e3.csv
